[metadata]
name = plover_midi
version = 0.2.5
description = MIDI keyboards/machines support for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_midi
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev0
	python-rtmidi>=1.1.0
py_modules =
	plover_midi

[options.entry_points]
console_scripts =
	plover_midi_test = plover_midi:test_machine
plover.machine =
	MIDI Keyboard = plover_midi:MidiStenotype
	Michela Keyboard = plover_midi:MichelaKeyboard

# vim: commentstring=#\ %s list
