[metadata]
name = plover_midi
version = 1.0.4
description = MIDI keyboards/machines support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_midi
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev4
	python-rtmidi>=1.1.0
packages =
	plover_midi
	plover_midi.gui_qt

[options.entry_points]
console_scripts =
	plover_midi_test = plover_midi.machine:test_machine
plover.machine =
	MIDI Keyboard = plover_midi.machine:MidiStenotype
plover.gui.qt.machine_option =
	plover_midi.machine:MidiStenotype = plover_midi.gui_qt.midi_option:MidiOption

# vim: commentstring=#\ %s list
